apps/site/web/static/css/_modal.scss
.modal-transparent {
  .modal-header {
    border: none;
  }

  .modal-content {
    background-color: transparent;
    border: none;
  }

  .modal-body {
    background-color: #fff;
    max-height: calc(100vh - 41px - 2rem);
    overflow-y: auto;
    overflow-x: hidden;
    border-radius: 1rem;
  }

  .close {
    color: #fff;
    margin-right: -15px; // undo default header padding
  }
}

.modal-backdrop {
  &.in {
    opacity: 0.7;
  }
}

// Fix the max-width.  TODO check when we upgrade; this might be fixed in
// other versions of Bootstrap.
@include media-breakpoint-up(sm) {
  .modal-dialog {
    max-width: $modal-md;
    padding: 0 0.5rem;
    margin: 0 auto;
  }
}

.select-modal-search {
  padding-bottom: 1rem;
}

.select-modal-option {
  font-weight: bold;

  &.disabled {
    font-weight: normal;
  }
}

